<resources>
    <string name="app_name">Covid Tracker</string>
    <string name="no_internet_connection_title">No Internet Connection</string>
    <string name="no_internet_msg">Please connect to Internet and retry.</string>
    <string name="total_cases">TOTAL CASES</string>
    <string name="active_cases">ACTIVE CASES</string>
    <string name="recovered">RECOVERED</string>
    <string name="total_deaths">TOTAL DEATHS</string>
    <string name="app_created_by">App Created by</string>
    <string name="data_source">Data Source: MyGov|MoHFW</string>
    <string name="share_app">Share App</string>
    <string name="about">About</string>
    <string name="states_and_uts">States and UTs</string>
    <string name="across_india">Across India</string>
    <string name="covid_tracker">Covid Tracker</string>
    <string name="an_app_by">An App By</string>
    <string name="across_var">Across %1$s</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="district_data">District Data</string>
    <string name="download_arogya_setu_app">Download Aarogya Setu App</string>
    <string name="change_language">Change Language</string>
    <string name="note_data">NOTE: Some Data might not be available</string>
    <string name="choose_language">Choose Language</string>
    <string name="active_rv">Active: %1$s</string>
    <string name="dev1">Mayank Kumar</string>
    <string name="dev2">Priyanshu</string>
    <string name="dev3">Shubham Shandilya</string>
    <string name="server_error_title">Server Error!</string>
    <string name="server_error_message">Unable to fetch data. Please try again after some time.</string>
    <string name="dialog_exit_app">Exit App</string>
    <string name="dialog_try_again">Try Again</string>
    <string name="new_update_title">App Update Available!</string>
    <string name="new_update_message">A new version of the app is available. Update Now
        to enjoy the latest features.</string>
    <string name="update_now_dialog">Update Now</string>
    <string name="update_later_dialog">Update Later</string>
    <string name="district_data_unavailable">District Data Currently Unavailable for %1$s</string>
    <string name="share_app_title">Share the App using</string>
    <string name="share_app_msg">Our lives have been impacted very badly due to the spread of Novel Corona Virus in India, but we are ready to face and win this challenge. Download Covid Tracker android app to know the current data related to covid19 in your *STATE or DISTRICT* to stay alert. Download the app for free from here: %1$s . *Also remember to share the app to your dear friends and family so that they can also be alert and take all the precautions.*</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id_release" translatable="false">ca-app-pub-4132639843352410/4974177895</string>
    <string name="indian_app">A Truly Indian Made App</string>
</resources>
