<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StateDetailWithDistrictActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/curved_rectangle_blue"
            android:elevation="8dp">

            <TextView
                android:id="@+id/total_cases_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/total_cases_count"
                android:layout_centerHorizontal="true"
                android:text="@string/total_cases"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/total_cases_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/curved_rectangle_orange"
            android:elevation="8dp">

            <TextView
                android:id="@+id/active_cases_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/active_cases_count"
                android:layout_centerHorizontal="true"
                android:text="@string/active_cases"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/active_cases_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/curved_rectangle_green"
            android:elevation="8dp">

            <TextView
                android:id="@+id/recovered_cases_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/recovered_cases_count"
                android:layout_centerHorizontal="true"
                android:text="@string/recovered"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/recovered_cases_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/curved_rectangle_red"
            android:elevation="8dp">

            <TextView
                android:id="@+id/death_cases_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@id/death_cases_count"
                android:layout_centerHorizontal="true"
                android:text="@string/total_deaths"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/death_cases_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="4dp"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="District data would be available very soon"/>
    </LinearLayout>

</LinearLayout>